# humanrail-sdk

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
go/: go.mod
go/escalation/: client.go  errors.go  retry.go  types.go  webhook.go
openapi/: escalation-engine-v1.yaml
python/: README.md  pyproject.toml
python/escalation_engine/: __init__.py  client.py  errors.py  retry.py  webhook.py
python/examples/: basic_escalation.py  langchain_tool.py
python/humanrail/: __init__.py  client.py  types.py  webhook.py
typescript/: package-lock.json  package.json  tsconfig.json
typescript/examples/: basic-escalation.ts  langchain-tool.ts  webhook-handler-express.ts
typescript/src/: client.ts  errors.ts  index.ts  retry.ts  types.ts  webhook.ts
